Partially revert an isolation boundary optimization.

This patch reverts a part of crrev.com/367a97e. This seems to have
caused DCHECK failures on one of the telemetry tests.

R=chrishtr@chromium.org, pdr@chromium.org, wangxianzhu@chromium.org

Bug: 891270
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ib99768154470fe69796e3a47645ffb1c981661a9
Reviewed-on: https://chromium-review.googlesource.com/c/1259298
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596325}
Former-commit-id: 5d1aacaa63cd61c15db0d96d63047a29a527cd35